# predix-matching-core

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
core/: CMakeLists.txt  Dockerfile
core/config/: core.yaml
core/include/predix/engine/: book_registry.hpp  decimal.hpp  matching_core.hpp  order_book.hpp  price_level.hpp  types.hpp
core/include/predix/server/: grpc_server.hpp
core/include/predix/wal/: wal_reader.hpp  wal_writer.hpp
core/proto/: matching_core.proto
core/src/: grpc_server.cpp  main.cpp
core/tests/: order_book_test.cpp  wal_replay_test.cpp
docs/: README.md  architecture.md  integration.md  java-compat-mapping.md  matching-rules.md
service/: Dockerfile  pom.xml
service/docker/: maven-settings.xml
service/src/main/java/com/predix/matching/: PredixMatchingCoreApplication.java
service/src/main/java/com/predix/matching/client/: CtfExecutionGateway.java  IndexerClient.java  MarketSchemaClient.java  MatchingCoreClient.java
service/src/main/java/com/predix/matching/config/: AdminAuthFilter.java  JacksonConfig.java  MatchingCoreGrpcConfig.java  OrderBookReconciliationScheduler.java  OrderBookWarmup.java  PendingCancelScheduler.java  PendingMatchScheduler.java  PredixProperties.java  RabbitMqConfig.java  RestClientConfig.java  RetryScheduler.java  SecurityFilter.java  TraceContext.java  TraceIdFilter.java
service/src/main/java/com/predix/matching/controller/: AdminOrderBookController.java  ExecutionTaskController.java  OrderBookController.java  OrderController.java  TradeController.java
service/src/main/java/com/predix/matching/engine/: InMemoryOrderBook.java  MatchingEngine.java  OrderBookRegistry.java  OrderStatusTransition.java  PriceLevel.java
service/src/main/java/com/predix/matching/exception/: BusinessException.java  ErrorCode.java  GlobalExceptionHandler.java
service/src/main/java/com/predix/matching/idempotency/: IdempotencyService.java
service/src/main/java/com/predix/matching/mq/: EventPublisher.java  ExecutionTaskConsumer.java  ExecutionTaskMessage.java  MatchingEventConsumer.java  MatchingEventMessage.java  MatchingMessagePublisher.java  NoOpMatchingMessagePublisher.java
service/src/main/resources/: application-prod.yml  application.yml
service/src/main/resources/db/migration/: V1__init.sql  V2__pending_match_status.sql  V3__pending_cancel_status.sql
service/src/test/resources/: application-h2.yml  application-test.yml
(+88 files in other folders)
